# t1f1-sdk

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish_sdk.yml
docs/: index.md
docs/api-reference/: analysis.md  cache.md  circuits.md  client.md  errors.md  events.md  frames.md  plotting.md  schemas.md  session.md
docs/concepts/: caching.md  data-shapes.md  free-vs-premium.md  overview.md  sync-vs-async.md
docs/getting-started/: authentication.md  installation.md  migration-from-fastf1.md  quickstart.md
docs/reference/: configuration.md  faq.md  glossary.md
docs/tutorials/: matplotlib-plots.md
examples/: caching.py  concurrent_sessions.py  plotting_matplotlib.py  premium_and_fallback.py  quickstart.py
src/t1f1/: __init__.py  _sync.py  analysis.py  cache.py  circuit.py  client.py  config.py  ergast.py  events.py  exceptions.py  plotting.py  schemas.py  session.py  transport.py  utils.py
src/t1f1/frames/: __init__.py  laps.py  telemetry.py
src/t1f1/ingestion/: __init__.py  decode.py  messages.py  resolver.py  results.py  session_clock.py  stream.py  timing.py  weather.py
src/t1f1/sources/: __init__.py  base.py  raw_f1.py  t1api.py
tests/: conftest.py  test_analysis.py  test_cache.py  test_circuit.py  test_client.py  test_decode.py  test_ergast.py  test_events.py  test_laps_frame.py  test_plotting.py  test_raw_source.py  test_resolver.py  test_results_decode.py  test_stream.py  test_t1api.py  test_telemetry_frame.py  test_telemetry_lap_and_ahead.py  test_timing_decode.py  test_utils.py  test_weather_decode.py
