[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "t1f1-sdk"
description = "A fast, robust Formula 1 telemetry SDK — a modern polars-native competitor to fastf1, with an optional premium tier backed by api.t1f1.com."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Turn One Telemetry" }]
keywords = ["formula1", "f1", "telemetry", "motorsport", "polars"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
]
dynamic = ["version"]
dependencies = [
    "httpx>=0.27",
    "polars>=1.0",
    "numpy>=1.24",
    # Windows has no system IANA tz database; polars materializes our UTC-tagged
    # Datetime columns via Python's zoneinfo, which needs this to resolve "UTC".
    "tzdata; sys_platform == 'win32'",
]

[project.optional-dependencies]
redis = ["redis>=5.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "ruff>=0.6",
    "black>=24.0",
    "redis>=5.0",
]

[project.urls]
Homepage = "https://t1f1.com"
API = "https://api.t1f1.com"
Source = "https://github.com/Turn-One-Organization/t1f1-sdk"

[tool.hatch.version]
path = "src/t1f1/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/t1f1"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"
markers = [
    "perf: performance benchmarks vs fastf1 (not run in the default gate)",
    "live: hits real F1 / T1API endpoints (skipped by default)",
]

[tool.coverage.run]
source = ["t1f1"]
branch = true

[tool.coverage.report]
show_missing = true
# The current suite covers 82% (branch); the gate sits below that so incidental
# drift doesn't fail CI, while still catching a genuinely untested new module.
fail_under = 75
